cambio de tamaños en secciones

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </header>
     <main>
         <section>
-            Content box
+            <p>>Content box</p>
         </section>
         <section>
-            Content box
+            <p>Content box</p>
         </section>
     </main>
     <footer>
