--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <header>
-        <h1>Header de la página</h1>
-        <h2>Header 2</h2>
+        <h3>Bienvenido</h3>
     </header>
     <main>
         <section>
