--- a/index.html
+++ b/index.html
@@ -5,25 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hola</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="dex.css">
 </head>
 
 
 <body>
-    <header>
-        <h1>Header de la página</h1>
-        <h2>Header 2</h2>
-    </header>
     <main>
-        <section>
-            <p>>Content box</p>
-        </section>
-        <section>
-            <p>Content box</p>
-        </section>
+        <a href="/about/index.html"></a>
+        <a href="/contact/index.html"></a>
+        <a href="/fotos/index.html"></a>
     </main>
-    <footer>
-        <span>Copyright</span>
-    </footer>
 </body>
 </html>
